--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,6 @@ author:           "Nathan Jessen"
 description:      ""
 url:              "http://nathanjessen.github.io"
 paginate:         10
+linkedin:         "//www.linkedin.com/in/njessen/"
+github:           "//github.com/nathanjessen"
+email:            "nathan.jessen@gmail.com"
