testing some plugin for categories

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         rdiscount
 pygments:         true
 
 # Permalinks
-permalink:        pretty
+permalink:        /:categories/:title
 
 # Custom vars
 author:           "Nathan Jessen"
