ignore some files. set up local server

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,12 @@ pygments:         true
 # Permalinks
 permalink:        /:categories/:title
 
+# Server
+destination:      ./_site
+exclude:          ["CNAME","README.md"]
+port:             4502
+
+
 # Custom vars
 base_url:         "/"
 author:           "Nathan Jessen"
