fixing templates and add projects and a post

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ markdown:         rdiscount
 pygments:         true
 
 # Permalinks
-permalink:        /:categories/:title
+permalink:        pretty
 
 # Server
 destination:      ./_site
