--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        pretty
 # Server
 destination:      ./_site
 exclude:          ["CNAME","README.md"]
-port:             4502
+# port:             4502
 
 
 # Custom vars
