Change how files are excluded
Use exclude in config file instead of using underscores in front of
folder names

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ permalink:        articles/:title
 # Server
 # port:             4502
 destination:      ./_site
-exclude:          ["CNAME","README.md"]
+exclude:          ["CNAME","README.md","LICENSE.md","cv","about","pens","talks"]
 
 
 # Custom vars
