--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            "Semanticss"
 author:           "Nathan Jessen"
-# BASE_PATH:        "http://semanticss.com"
-BASE_PATH:        "http://0.0.0.0:4000"
+BASE_PATH:        "http://semanticss.com"
+# BASE_PATH:        "http://0.0.0.0:4000"
 github_url:       "https://github.com/nathanjessen/nathanjessen.github.com"
 description:      "Portfolio of Nathan Jessen"
 
