--- a/.gitignore
+++ b/.gitignore
@@ -31,13 +31,10 @@ nbproject
 *.sublime-workspace
 .idea
 
-# Komodo
-*.komodoproject
-.komodotools
-
 # grunt-html-validation
 validation-status.json
 validation-report.json
 
 # Folders to ignore
+.sass-cache
 node_modules
