--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:      "Portfolio of Nathan Jessen"
 # port:             4502
 destination:      ./_site
 include:          ["_pages"]
-exclude:          ["CNAME","README.md","LICENSE.md","_data","_examples","node_modules","assets/.sass-cache"]
+exclude:          ["vendor","CNAME","README.md","LICENSE.md","_data","_examples","node_modules","assets/.sass-cache"]
 
 paginate:         10
 paginate_path:    "/blog/page:num/"
