--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "css/inuit.css"]
-	path = css/inuit.css
+[submodule "assets/scss/inuit.css"]
+	path = assets/scss/inuit.css
 	url = git://github.com/csswizardry/inuit.css.git
