Update permalink structure and other vars
Update permalink structure and other minor variable changes

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ title:            "Nathan Jessen"
 author:           "Nathan Jessen"
 BASE_PATH:        "http://nathanjessen.github.io"
 # BASE_PATH:        "http://0.0.0.0:4000"
+baseurl: ""
 github_url:       "https://github.com/nathanjessen/nathanjessen.github.io"
 description:      "Portfolio of Nathan Jessen"
 
@@ -11,9 +12,8 @@ destination:      ./_site
 include:          ["_pages"]
 exclude:          ["vendor","CNAME","README.md","LICENSE.md","_data","_examples","node_modules","assets/.sass-cache"]
 
-paginate:         10
-paginate_path:    "/blog/page:num/"
-permalink:        "/blog/:year/:title/"
+
+permalink:        ":year/:month/:title/"
 relative_permalinks: false
 
 
@@ -29,6 +29,11 @@ blog_url:         "/blog/"
 rss_path:         feed.xml
 categories_path:  categories.html
 tags_path:        tags.html
+
+# Google Analytics
+ga_domain:
+ga_tracking_id:
+
 
 # Social
 githubs:           "//github.com/nathanjessen"
