Update gcrtires url

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -13,7 +13,7 @@
 - name: "GCR/TDS Tires & Service"
   date: 2014/01/09
   tech: "Adobe CQ5 CMS, Handlebars, LESS"
-  url: http://www.gcrtdstires.com
+  url: http://www.gcrtires.com
   company: VML
 
 - name: "Have We Seen Your Cat Lately?"
