Add link to nonstop love project

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,6 +10,12 @@
   url: http://leagueofcaptains.gatorade.com/
   company: VML
 
+- name: "Southwest Airlines - Nonstop Love"
+  date: 2014/06/14
+  tech: "Assemble, Sass, Grunt"
+  url: http://www.nonstoplove.com/
+  company: VML
+
 - name: "BIVI UltraDuramune"
   date: 2014/05/02
   tech: "Adobe CQ5, Handlebars, SASS, Grunt"
