--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-livereload": "~1.2.0",
     "gulp-minify-css": "~0.2.0",
     "gulp-notify": "^1.8.0",
+    "gulp-rename": "^1.2.0",
     "gulp-ruby-sass": "~0.4.0",
     "gulp-uglify": "~0.2.0",
     "gulp-uncss": "^0.5.0",
