--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,9 @@ permalink:        ":year/:month/:title/"
 safe:             true
 highlighter:      rouge
 markdown:         "kramdown"
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
 timezone:         "America/Chicago"
 
 
@@ -55,8 +58,6 @@ codepen:          "http://codepen.io/njessen"
 # Contact
 email:            "nathan.jessen@gmail.com"
 location:         "Las Vegas, NV"
-phone:            "(402) 427-3734"
-tel:              "4024273734"
 
 # All links will be namespaced by BASE_PATH if defined.
 # Links in your website should always be prefixed with {{ site.BASE_PATH }}
