Update gulp and its packages. Clean up assets
Update dev dependencies and update gulp file to fix errors with running
jekyll and gulp at the same time. Gulp will now serve local site using
child process.
Reduce number of assets by concatenating several files.

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description:      "Portfolio of Nathan Jessen"
 # port:             4502
 destination:      ./_site
 include:          ["_pages"]
-exclude:          ["vendor","CNAME","README.md","LICENSE.md","node_modules",".sass-cache","package.json","Gemfile","Gemfile.lock","gulpfile.js","*.sublime-project"]
+exclude:          ["vendor","CNAME","README.md","LICENSE.md","node_modules",".sass-cache","package.json","Gemfile","Gemfile.lock","gulpfile.js","*.sublime-project","*.sublime-workspace"]
 
 
 permalink:        ":year/:month/:title/"
@@ -25,7 +25,7 @@ timezone:         "America/Chicago"
 
 
 sass:
-  style: expanded
+  style: compressed
   sass_dir: _scss
 
 collections:
