--- a/package.json
+++ b/package.json
@@ -11,20 +11,17 @@
   "author": "Nathan Jessen",
   "license": "The MIT License (MIT)",
   "devDependencies": {
-    "glob": "^4.0.6",
-    "gulp": "*",
-    "gulp-autoprefixer": "0.0.6",
-    "gulp-concat": "~2.1.7",
-    "gulp-imagemin": "^1.0.1",
-    "gulp-livereload": "~1.2.0",
-    "gulp-minify-css": "~0.2.0",
-    "gulp-notify": "^1.8.0",
-    "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "~0.4.0",
-    "gulp-uglify": "~0.2.0",
-    "gulp-uncss": "^0.5.0",
-    "gulp-util": "~2.2.13",
-    "gulp-watch": "~0.5.2",
-    "tiny-lr": "0.0.5"
+    "browser-sync": "^2.18.5",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-clean-css": "^2.3.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^3.0.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.7",
+    "gulp-watch": "^4.3.11"
   }
 }
