Move sass files to assets directory

--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ timezone:         "America/Chicago"
 
 sass:
   style: compressed
-  sass_dir: _scss
+  sass_dir: _assets/scss
 
 collections:
   projects:
