--- a/package.json
+++ b/package.json
@@ -11,17 +11,20 @@
   "author": "Nathan Jessen",
   "license": "The MIT License (MIT)",
   "devDependencies": {
+    "autoprefixer": "^6.5.4",
     "browser-sync": "^2.18.5",
+    "css-mqpacker": "^5.0.1",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.1",
-    "gulp-clean-css": "^2.3.0",
     "gulp-concat": "^2.6.1",
+    "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.1.1",
     "gulp-notify": "^2.2.0",
+    "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^3.0.0",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "postcss-import": "^9.0.0",
+    "postcss-nested": "^1.0.0"
   }
 }
