--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "gulp-watch": "^4.3.11",
     "postcss-import": "^9.0.0",
     "postcss-nested": "^1.0.0"
+  },
+  "dependencies": {
+    "flexboxgrid": "~6.3.1",
+    "tachyons": "~4.6.1"
   }
 }
