--- a/_config.yml
+++ b/_config.yml
@@ -1,59 +1,159 @@
-title:            "Nathan Jessen"
-author:           "Nathan Jessen"
-BASE_PATH:        "http://nathanjessen.github.io"
-# BASE_PATH:        "http://localhost:4000"
-github_url:       "https://github.com/nathanjessen/nathanjessen.github.io"
-description:      "Portfolio of Nathan Jessen"
-
-# Server
-# port:             4502
-destination:      ./_site
-include:          ["_pages"]
-exclude:          ["vendor","CNAME","README.md","LICENSE.md","node_modules","package.json","Gemfile","Gemfile.lock","gulpfile.js","*.sublime-project","*.sublime-workspace"]
-
-
-permalink:        ":year/:month/:title/"
-
-
-safe:             true
-highlighter:      rouge
-markdown:         "kramdown"
-kramdown:
-  input: GFM
-  syntax_highlighter: rouge
-timezone:         "America/Chicago"
-
+####################
+# Where things are
+####################
+# destination: ./_site
+# plugins_dir: _plugins
+# layouts_dir: _layouts
+# data_dir: _data
+# includes_dir: _includes
 collections:
+  posts:
+    output: true
   projects:
     output: false
-    # output: true
-    # permalink: /projects/:path/
 
 
+####################
+# Handling Reading
+####################
+include:
+  - "_pages"
+exclude:
+  - "node_modules"
+  - "*.sublime-project"
+  - "*.sublime-workspace"
+  - "Gemfile"
+  - "Gemfile.lock"
+  - "gulpfile.js"
+  - "package.json"
+  - "LICENSE.md"
+  - "README.md"
+  - "yarn.lock"
+
+
+####################
+# Filtering Content
+####################
+# show_drafts: null
+# limit_posts: 0
+# future: false
+# unpublished: false
+
+
+####################
+# Plugins
+####################
+# whitelist: []
+gems:
+  - jekyll-sitemap
+
+
+####################
+# Conversion
+####################
+# markdown: kramdown
+# excerpt_separator: "\n\n"
+
+
+####################
+# Serving
+####################
+# detach: false
+# port: 4000
+# host: 127.0.0.1
+# baseurl: ""
+# show_dir_listing: false
+
+
+####################
+# Outputting
+####################
+permalink: "categories/:categories/:title/"
+# paginate_path: /page:num
+timezone: "America/Los_Angeles"
+# quiet: false
+verbose: false
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: article
+  -
+    scope:
+      path: "_pages"
+      scope: "pages"
+    values:
+      layout: "page"
+  -
+    scope:
+      path: "_slides"
+    values:
+      layout: "slides"
+      permalink: "/slides/:slug/"
+  -
+    scope:
+      path: "_projects"
+      type: "projects"
+    values:
+      layout: "page"
+      permalink: "/projects/:path/"
+# liquid:
+#   error_mode: warn
+
+
+####################
+# Markdown Processors
+####################
+# rdiscount:
+#   extensions: []
+# redcarpet:
+#   extensions: []
+kramdown:
+  # auto_ids: true
+  # footnote_nr: 1
+  # entity_output: as_char
+  # toc_levels: 1..6
+  # smart_quotes: lsquo,rsquo,ldquo,rdquo
+  # input: GFM
+  # hard_wrap: false
+  # footnote_nr: 1
+  syntax_highlighter: rouge
+
+
+####################
+# Other
+####################
+
+# Liquid profiler - Generate a Liquid rendering profile to help you identify performance bottlenecks.
+profile: false
 
 # Custom vars
-base_url:         "/"
-blog_url:         "/blog/"
-rss_path:         atom.xml
-categories_path:  categories.html
-tags_path:        tags.html
-
-# Google Analytics
-ga_domain:        nathanjessen.github.io
-ga_tracking_id:   UA-42437510-1
+locale: "en-US"
+title: "Nathan Jessen"
+categories_path: categories.html
+tags_path: tags.html
+rss_path: atom.xml
 
 
-# Social
-githubs:           "//github.com/nathanjessen"
-linkedin:         "//www.linkedin.com/in/njessen/"
-gplus:            "//plus.google.com/+NathanJessen/posts"
-twitter:          "https://twitter.com/nathanjessen"
-codepen:          "http://codepen.io/njessen"
+####################
+# Personal Information
+####################
+
+author: "Nathan Jessen"
 
 # Contact
-email:            "nathan.jessen@gmail.com"
-location:         "Las Vegas, NV"
+email: "nathan.jessen@gmail.com"
+location: "Las Vegas, NV"
 
-# All links will be namespaced by BASE_PATH if defined.
-# Links in your website should always be prefixed with {{ site.BASE_PATH }}
-# Do not put a "/" at the end of the url.
+# Google Analytics
+ga_domain: nathanjessen.github.io
+ga_tracking_id: UA-42437510-1
+
+# Social
+githubs: "https://github.com/nathanjessen"
+linkedin: "https://www.linkedin.com/in/njessen"
+gplus: "//plus.google.com/+NathanJessen/posts"
+twitter: "https://twitter.com/nathanjessen"
+codepen: "http://codepen.io/njessen"
