Setup travis-ci

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ include:
   - "_pages"
 exclude:
   - "node_modules"
+  - "vendor"
   - "*.sublime-project"
   - "*.sublime-workspace"
   - "Gemfile"
