--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-# Ignore docs files
-_site
-_drafts
-
 # Numerous always-ignore extensions
 *.diff
 *.err
@@ -30,11 +26,10 @@ nbproject
 .idea
 Gemfile.lock
 
-# grunt-html-validation
-validation-status.json
-validation-report.json
-
 # Folders to ignore
+_site
+_drafts
 node_modules
+vendor
 .bundle
 .jekyll-metadata
