--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nathanjessen",
   "description": "Personal website of web developer, Nathan Jessen",
+  "author": "Nathan Jessen",
   "version": "1.0.0",
   "homepage": "http://nathanjessen.github.io",
   "main": "js",
@@ -8,21 +9,27 @@
     "type": "git",
     "url": "https://nathanjessen@github.com/nathanjessen/nathanjessen.github.io.git"
   },
-  "author": "Nathan Jessen",
   "license": "The MIT License (MIT)",
   "scripts": {
-    "start": "gulp",
-    "refresh": "rm -fr node_modules && yarn"
+    "refresh": "rimraf node_modules && yarn",
+    "start": "gulp preview",
+    "preview": "gulp preview",
+    "publish": "gulp publish"
+  },
+  "engines": {
+    "node": "7.4.0",
+    "npm": "4.0.5",
+    "yarn": "0.19.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.4",
     "browser-sync": "^2.18.5",
+    "dagger-tasks": "^0.0.1",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-cssnano": "^2.1.2",
     "gulp-imagemin": "^3.1.1",
-    "gulp-notify": "^2.2.0",
     "gulp-postcss": "^6.2.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.0.0",
@@ -31,10 +38,12 @@
     "gulp-watch": "^4.3.11",
     "postcss-import": "^9.0.0",
     "postcss-import-url": "^2.2.0",
-    "postcss-nested": "^1.0.0"
+    "postcss-nested": "^1.0.0",
+    "rimraf": "^2.5.4"
   },
   "dependencies": {
     "flexboxgrid": "~6.3.1",
+    "require-dir": "^0.3.2",
     "tachyons": "~4.6.1"
   }
 }
