--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,6 @@ collections:
   projects:
     output: false
 
-
 ####################
 # Handling Reading
 ####################
@@ -31,7 +30,6 @@ exclude:
   - "README.md"
   - "yarn.lock"
 
-
 ####################
 # Filtering Content
 ####################
@@ -40,23 +38,20 @@ exclude:
 # future: false
 # unpublished: false
 
-
 ####################
 # Plugins
 ####################
 # whitelist: []
-gems:
+plugins:
   - jekyll-seo-tag
   - jekyll-feed
   - jekyll-sitemap
-
 
 ####################
 # Conversion
 ####################
 # markdown: kramdown
 # excerpt_separator: "\n\n"
-
 
 ####################
 # Serving
@@ -67,7 +62,6 @@ gems:
 # baseurl: ""
 # show_dir_listing: false
 
-
 ####################
 # Outputting
 ####################
@@ -76,37 +70,31 @@ permalink: ":categories/:title/"
 timezone: "America/Los_Angeles"
 verbose: false
 defaults:
-  -
-    scope:
+  - scope:
       path: ""
       type: "posts"
     values:
       layout: article
-  -
-    scope:
+  - scope:
       path: "_pages"
       scope: "pages"
     values:
       layout: "page"
-  -
-    scope:
+  - scope:
       path: "slides"
     values:
       layout: "slides"
-  -
-    scope:
+  - scope:
       path: "_projects"
       type: "projects"
     values:
       layout: "page"
-
 
 ####################
 # Markdown Processor
 ####################
 kramdown:
   syntax_highlighter: rouge
-
 
 ####################
 # Other
@@ -122,7 +110,6 @@ description: "Blog and Portfolio of Nathan Jessen"
 categories_path: categories.html
 tags_path: tags.html
 rss_path: atom.xml
-
 
 ####################
 # Personal Information
@@ -144,27 +131,25 @@ githubs:
   username: "nathanjessen"
 # codepen:
 #   username: "njessen"
-twitter:
-  username: "nathanjessen"
+# twitter:
+#   username:
 # medium:
 #   username: "@nathanjessen"
 linkedin:
   username: "njessen"
-gplus:
-  username: "NathanJessen"
+# gplus:
+#   username:
 # instagram:
 #   username:
 # dribbble:
 #   username:
 # angellist:
-#   username: "nathanjessen"
+#   username:
 
 # jekyll-seo-tag - social profiles
 social:
   links:
     - https://github.com/nathanjessen"
     - http://codepen.io/njessen"
-    - https://twitter.com/nathanjessen"
     - https://medium.com/@nathanjessen"
     - https://www.linkedin.com/in/njessen"
-    - https://plus.google.com/+NathanJessen/posts"
