--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,18 @@ github_username:  nathanjessen
 # Contact
 location: "Las Vegas, NV"
 
+# Build settings
+# theme: minima
+
+####################
+# Plugins
+####################
+# whitelist: []
+plugins:
+  - jekyll-seo-tag
+  - jekyll-feed
+  - jekyll-sitemap
+
 ####################
 # Where things are
 ####################
@@ -73,15 +85,6 @@ exclude:
 # limit_posts: 10
 # future: false
 # unpublished: false
-
-####################
-# Plugins
-####################
-# whitelist: []
-plugins:
-  - jekyll-seo-tag
-  - jekyll-feed
-  - jekyll-sitemap
 
 ####################
 # Conversion
