--- a/_config.yml
+++ b/_config.yml
@@ -65,13 +65,29 @@ collections:
 ####################
 include:
   - "_pages"
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
+
 exclude:
-  - "node_modules"
   - "vendor"
-  - "*.sublime-project"
-  - "*.sublime-workspace"
-  - "Gemfile"
-  - "Gemfile.lock"
   - "gulpfile.js"
   - "package.json"
   - "LICENSE.md"
