--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,8 @@
-# Numerous always-ignore extensions
-*.diff
-*.err
-*.orig
-*.log
-*.rej
-*.swo
-*.swp
-*.zip
-*.vi
-*.psd
-*~
-
-# OS or Editor folders
-.DS_Store
-._*
-Thumbs.db
-.cache
-.project
-.settings
-.tmproj
-*.esproj
-nbproject
-*.sublime-project
-*.sublime-workspace
-.idea
-Gemfile.lock
-
-# Folders to ignore
 _site
 _drafts
-node_modules
-vendor
-.bundle
-.jekyll-metadata
+.DS_Store
 .jekyll-cache
-.sass-cache
-package-lock.json
-yarn.lock
-Gemfile.lock
+.jekyll-metadata
+node_modules
+.bundle/
+vendor/
