--- a/package.json
+++ b/package.json
@@ -1,44 +1,38 @@
 {
   "name": "nathanjessen",
+  "version": "2.0.0",
   "description": "Personal website of web developer, Nathan Jessen",
-  "author": "Nathan Jessen",
-  "version": "1.0.0",
   "homepage": "http://nathanjessen.github.io",
-  "main": "js",
+  "main": "gulpfile.babel.js",
+  "devDependencies": {
+    "@tailwindcss/ui": "^0.6.2",
+    "autoprefixer": "9.8.6",
+    "babel-preset-env": "1.7.0",
+    "babel-register": "6.26.0",
+    "browser-sync": "2.26.12",
+    "cross-env": "7.0.2",
+    "cross-spawn": "7.0.3",
+    "cssnano": "4.1.10",
+    "gulp": "4.0.2",
+    "gulp-postcss": "8.0.0",
+    "postcss-import": "12.0.1",
+    "tailwindcss": "1.8.10"
+  },
+  "scripts": {
+    "build:production": "cross-env NODE_ENV=production gulp",
+    "build:dev": "cross-env NODE_ENV=development gulp",
+    "build": "npm run build:production",
+    "dev": "cross-env NODE_ENV=development gulp serve",
+    "start": "npm run dev"
+  },
   "repository": {
     "type": "git",
     "url": "https://nathanjessen@github.com/nathanjessen/nathanjessen.github.io.git"
   },
+  "bugs": {
+    "url": "https://github.com/nathanjessen/nathanjessen.github.io/issues"
+  },
+  "author": "Nathan Jessen",
   "license": "MIT",
-  "scripts": {
-    "refresh": "rimraf node_modules && yarn",
-    "start": "gulp preview",
-    "preview": "gulp preview",
-    "publish": "gulp publish"
-  },
-  "devDependencies": {
-    "autoprefixer": "^6.5.4",
-    "browser-sync": "^2.18.5",
-    "dagger-tasks": "^0.0.1",
-    "glob": "^7.1.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssnano": "^2.1.2",
-    "gulp-imagemin": "^3.1.1",
-    "gulp-postcss": "^6.2.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^2.0.0",
-    "gulp-uncss": "^1.0.6",
-    "gulp-util": "^3.0.7",
-    "gulp-watch": "^4.3.11",
-    "postcss-import": "^9.0.0",
-    "postcss-import-url": "^2.2.0",
-    "postcss-nested": "^1.0.0",
-    "rimraf": "^2.5.4"
-  },
-  "dependencies": {
-    "flexboxgrid": "~6.3.1",
-    "require-dir": "^0.3.2",
-    "tachyons": "~4.6.1"
-  }
+  "dependencies": {}
 }
