--- a/_config.yml
+++ b/_config.yml
@@ -1,24 +1,4 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-
-#
 # Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-# Custom vars
 lang: "en-US"
 title: "Nathan Jessen"
 email: nathan.jessen@gmail.com
@@ -29,9 +9,6 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 categories_path: categories.html
 tags_path: tags.html
 rss_path: atom.xml
-github_username:  nathanjessen
-twitter_username: natejessen
-logo: /assets/images/wasp.png
 
 header_pages:
   - _pages/index.html
@@ -50,46 +27,11 @@ plugins:
   - jekyll-feed
   - jekyll-sitemap
 
-####################
-# Where things are
-####################
-# destination: ./_site
-# plugins_dir: _plugins
-# layouts_dir: _layouts
-# data_dir: _data
-# includes_dir: _includes
-collections:
-  posts:
-    output: true
-  projects:
-    output: false
-
-####################
-# Handling Reading
-####################
-include:
-  - "_pages"
-
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
 # the internal "default list".
 #
-# Excluded items can be processed by explicitly listing the directories or
-# their entries' file path in the `include:` list.
-#
-# exclude:
-#   - .sass-cache/
-#   - .jekyll-cache/
-#   - gemfiles/
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules/
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
-
 exclude:
   - Gemfile
   - Gemfile.lock
@@ -102,6 +44,8 @@ exclude:
   - src
   - tailwind.config.js
   - vendor
+
+# include:
 
 ####################
 # Filtering Content
@@ -132,6 +76,23 @@ permalink: ":categories/:title/"
 # paginate_path: /page:num
 timezone: "America/Denver"
 verbose: false
+####################
+# Where things are
+####################
+# destination: ./_site
+# plugins_dir: _plugins
+# layouts_dir: _layouts
+# data_dir: _data
+# includes_dir: _includes
+collections:
+  posts:
+    output: true
+  pages:
+    output: true
+    permalink: /:name/
+  projects:
+    output: false
+
 defaults:
   - scope:
       path: ""
@@ -166,24 +127,27 @@ profile: false
 # Personal Information
 ####################
 
-author: "Nathan Jessen"
-# logo:
+author: Nathan Jessen
+logo: /assets/images/wasp.png
 
 # Google Analytics
 ga_domain: nathanjessen.github.io
 ga_tracking_id: UA-42437510-1
 
+github_username:  nathanjessen
+twitter_username: natejessen
+
 # Social
 githubs:
-  username: "nathanjessen"
+  username: nathanjessen
 # codepen:
-#   username: "njessen"
+#   username: njessen
 # twitter:
 #   username:
 # medium:
-#   username: "@nathanjessen"
+#   username: @nathanjessen
 linkedin:
-  username: "njessen"
+  username: njessen
 # gplus:
 #   username:
 # instagram:
