--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -3,104 +3,108 @@
   date: 2014/02/12
   tech: HTML5, Grunt, SASS
   link: http://www.bividollarsandsense.com
-  company: VMLYR
-  published: false
-  class: bg-blue-400
+  company: VML
+  abbrev: VML
+  available: false
 
-- title: Duramune Lepto - Lepto Videos
+- title: Duramune Lepto
   client: Boehringer Ingelheim
   date: 2013/03/20
-  tech: Bootstrap modal
-  link: http://www.duramunelepto.com/lepto_videos.html
-  company: VMLYR
-  published: false
-  class: bg-blue-400
+  tech: Adobe CQ5, Bootstrap
+  link: http://www.duramunelepto.com
+  company: VML
+  abbrev: VML
+  available: false
 
-- title: "Epilepsy in Dogs"
-  client: "Boehringer Ingelheim"
+- title: Epilepsy in Dogs
+  client: Boehringer Ingelheim
   date: 2012/11/21
-  tech: "Adobe CQ5"
+  tech: Adobe CQ5
   link: http://www.epilepsyindogs.co.uk
-  company: VMLYR
-  class: bg-blue-400
+  company: VML
+  abbrev: VML
+  available: false
 
-- title: "Have We Seen Your Cat Lately?"
-  client: "Boehringer Ingelheim"
+- title: Have We Seen Your Cat Lately?
+  client: Boehringer Ingelheim
   date: 2013/11/10
-  tech: "Adobe CQ5"
+  tech: Adobe CQ5
   link: http://www.haveweseenyourcatlately.com/Home.html
-  company: VMLYR
-  class: bg-blue-400
+  company: VML
+  abbrev: VML
+  available: false
 
-- title: "ProZinc"
-  client: "Boehringer Ingelheim"
+- title: ProZinc
+  client: Boehringer Ingelheim
   date: 2013/05/04
-  tech: "Adobe CQ5, Handlebars, Sass"
-  link: http://www.prozinc.us/
-  company: VMLYR
-  class: bg-blue-400
+  tech: Adobe CQ5, Handlebars, Sass
+  link: http://www.prozinc.us
+  company: VML
+  abbrev: VML
+  available: false
 
 - title: Purefil<sup>TM</sup> Technology
   client: Boehringer Ingelheim
   date: 2012/10/21
   tech: Adobe CQ5
   link: http://www.bivipurefil.com
-  company: VMLYR
-  published: false
-  class: bg-blue-400
+  company: VML
+  abbrev: VML
+  available: false
 
 - title: UltraDuramune
   client: Boehringer Ingelheim
   date: 2014/05/02
   tech: Adobe CQ5, Handlebars, SASS, Grunt
   link: http://www.biviultraduramune.com
-  company: VMLYR
-  published: false
-  class: bg-blue-400
+  company: VML
+  abbrev: VML
+  available: false
 
 - title: eVent Fabrics
   client: GE
   date: 2013/01/15
   tech: WordPress
-  link: http://eventfabrics.com/
-  company: VMLYR
-  published: false
-  class: bg-red-400
+  link: http://eventfabrics.com
+  company: VML
+  abbrev: VML
+  available: false
 
 - title: League of Captains
   client: Gatorade
   date: 2014/07/21
   tech: Jade, Stylus, Backbone, Grunt
-  link: http://leagueofcaptains.gatorade.com/
-  company: VMLYR
-  published: false
-  class: bg-orange-500
+  link: http://leagueofcaptains.gatorade.com
+  company: VML
+  abbrev: VML
+  available: false
 
-- title: "Sweat It. Get It."
-  client: "Gatorade"
+- title: Sweat It. Get It.
+  client: Gatorade
   date: 2014/07/30
-  tech: "Jade, Stylus, Backbone, Grunt, Sitefinity"
+  tech: Jade, Stylus, Backbone, Grunt, Sitefinity
   link: http://www.gatorade.com/sweat-it-get-it
-  company: VMLYR
-  published: false
-  class: bg-orange-500
+  company: VML
+  abbrev: VML
+  available: false
 
-- title: "GCR/TDS Tires & Service"
-  client: "Bridgestone & Firestone"
+- title: GCR/TDS Tires & Service
+  client: Bridgestone & Firestone
   date: 2014/01/09
-  tech: "Adobe CQ5, Handlebars, LESS"
+  tech: Adobe CQ5, Handlebars, LESS
   link: http://www.gcrtires.com
-  company: VMLYR
-  class: bg-red-500
+  company: VML
+  abbrev: VML
+  available: true
 
 - title: ClearCurrent Pro
   client: GE
   date: 2012/11/15
   tech: Skeleton framework, YouTube API
   link: http://www.clearcurrentpro.com
-  company: VMLYR
-  published: false
-  class: bg-green-400
+  company: VML
+  abbrev: VML
+  available: false
 
 - title: Heartland Trailways
   client: Heartland Trailways
@@ -108,8 +112,8 @@
   tech: WordPress
   link: http://www.heartlandtrailways.com
   company: Freelance
-  published: false
-  class: bg-red-500
+  abbrev: HT
+  available: false
 
 - title: Rosedale Development Association
   client: Rosedale Development Association
@@ -117,22 +121,50 @@
   tech: WordPress
   link: http://rosedale.org
   company: Freelance
-  published: false
-  class: bg-green-400
+  abbrev: RDA
+  available: false
 
 - title: Nonstop Love
   client: Southwest Airlines
   date: 2014/06/14
   tech: Assemble, Sass, Grunt
-  link: http://www.nonstoplove.com/
-  company: VMLYR
-  published: false
-  class: bg-blue-600
+  link: http://www.nonstoplove.com
+  company: VML
+  abbrev: VML
+  available: false
 
 - title: Sprint
   client: Sprint
   date: 2016/12/01
   tech: AEM/CQ6, AngularJS, Sass, Gulp
   link: https://www.sprint.com
-  company: VMLYR
-  class: bg-orange-400
+  company: VML
+  abbrev: VML
+  available: false
+
+- title: Resource Allocation and Forecasting Tool
+  client: VML
+  date: 2018/10/01
+  tech: Ember
+  link: https://raft.vmlapps.com
+  company: VML
+  abbrev: VML
+  available: false
+
+- title: Estimāte
+  client: VML
+  date: 2019/09/01
+  tech: AEM/CQ6, AngularJS, Sass, Gulp
+  link: https://estimate.vmlapps.com
+  company: VML
+  abbrev: VML
+  available: false
+
+- title: Edward Jones Careers
+  client: Edward Jones
+  date: 2014/05/01
+  tech: Adobe CQ5
+  link: https://careers.edwardjones.com
+  company: VML
+  abbrev: VML
+  available: false
