--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@ header_pages:
   - _pages/index.html
   - _pages/about.html
   - _pages/projects.html
+  - _pages/posts.html
 
 # Build settings
 # theme: minima
