--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ defaults:
       path: ""
       type: "posts"
     values:
-      layout: article
+      layout: post
   - scope:
       path: "_pages"
       scope: "pages"
