Remove twitter username

--- a/_config.yml
+++ b/_config.yml
@@ -147,7 +147,7 @@ ga_tracking_id: UA-42437510-1
 # Social
 # facebook_url: https://facebook.com/
 github_url:  https://github.com/nathanjessen
-twitter_url: https://twitter.com/natejessen
+# twitter_url: https://twitter.com/
 linkedin_url: https://www.linkedin.com/in/njessen/
 # codepen_url: https://codepen.io/njessen
 # medium_url: https://medium.com/@nathanjessen/about
